<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bellota_text_regular"
        android:text="@string/question2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question">

        <Button
            android:id="@+id/b_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_text_regular"
            android:text="@string/no" />

        <Button
            android:id="@+id/b_yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/bellota_text_regular"
            android:text="@string/yes"
            app:layout_constraintEnd_toStartOf="@+id/b_edit"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>