<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_text_regular"
            android:text="@string/back" />

        <Button
            android:id="@+id/b_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/bellota_text_regular"
            android:text="@string/ok"
            app:layout_constraintEnd_toStartOf="@+id/b_edit"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/bellota_text_regular"
        android:text="@string/new_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_new_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_new_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:background="@color/light_gray"
        android:fontFamily="@font/bellota_text_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_name" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bellota_text_regular"
        android:text=" "
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_name" />

    <TextView
        android:id="@+id/b_delete_dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/delete_dir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg"
        android:fontFamily="@font/bellota_text_bold"
        android:textColor="@color/light_gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>