<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepetitionActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/tv_dir_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/bellota_text_bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginTop="15dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dir_name">


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/bellota_text_bold"/>

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/bellota_text_regular"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text=" "
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_result" />

        <LinearLayout
            android:id="@+id/ll_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/b_dislike"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:src="@drawable/dislike" />

            <ImageButton
                android:id="@+id/b_like"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="120dp"
                android:background="@null"
                android:src="@drawable/like" />

        </LinearLayout>

        <TextView
            android:id="@+id/b_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="115dp"
            android:text="@string/again"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/bellota_text_bold"/>

        <TextView
            android:id="@+id/b_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_again"
            android:fontFamily="@font/bellota_text_bold"/>

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bellota_text_bold"
            android:gravity="center"
            android:text="@string/hint2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>