<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:fontFamily="@font/bellota_text_regular"/>

        <Button
            android:id="@+id/b_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:text="@string/ok"
            app:layout_constraintEnd_toStartOf="@+id/b_edit"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/bellota_text_regular"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="7dp"
        android:text="@string/word"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_new_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0"
        android:fontFamily="@font/bellota_text_regular"/>

    <EditText
        android:id="@+id/et_new_word"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="14dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/tv_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bellota_text_regular"
        android:maxLength="150"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tv_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="7dp"
        android:text="@string/translate"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bellota_text_regular"/>

    <EditText
        android:id="@+id/et_trans"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trans"
        android:fontFamily="@font/bellota_text_regular"
        android:maxLength="150"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="30dp"
        android:text=" "
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_trans"
        app:layout_constraintVertical_bias="0.0"
        android:fontFamily="@font/bellota_text_regular"/>

</androidx.constraintlayout.widget.ConstraintLayout>