<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/bellota_text_bold"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/b_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/settings"
        android:background="@null"/>

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/gray"
        android:fontFamily="@font/bellota_text_regular"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="323dp"
        android:layout_marginRight="323dp"
        android:text="@string/my_dirs"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        android:fontFamily="@font/bellota_text_bold"/>

    <ListView
        android:id="@+id/lv_dir"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHeight_max="365dp"/>

    <Button
        android:id="@+id/b_add_dir"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray"
        android:text="@string/add_dir"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bellota_text_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>